@@ -1077,6 +1077,13 @@ Details    : skiplists are used to group compatible locks on granted list
              that was implemented as tracking first and last lock of each lock group
              the patch changes that to using doubly linked lists
 
+Severity   : normal
+Bugzilla   : 15574
+Description: MDS LBUG: ASSERTION(!IS_ERR(dchild))
+Details    : Change LASSERTs to client eviction (i.e. abort client's recovery)
+             because LASSERT on both the data supplied by a client, and the data 
+	     on disk is dangerous and incorrect.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
